--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
     font-size: 16px;
 }
 
-.crypt-tomb-contianer{
+.crypt-tomb-container{
     display: grid;
     justify-content: center;
     width: 100svw;
